# Data-glossary

./: .env  data_glossary.db  data_glossary.py  main.py  pyproject.toml  requirement.txt  sap.txt  sap_tables.csv  transactional_codes.csv
core/: security.py
crud/: data.py  user.py
db/: database.py
faiss_index/: index.faiss  index.pkl
models/: Session.py  data.py  user.py
routers/: data.py  user.py
schemas/: session.py  user.py
utility/: Data_glossary.py  data.py  logic.py  scrap.py  sql_agent.py
